# LLM-and-BigData-in-Distributed-NL-data-process

./: .gitignore  README.md  mergaForLLM.py  workflow.dot
client/: .dockerignore  Dockerfile  alembic.ini  config.py  config.yml  jwt_config.py  lab.ipynb  main.py  pyproject.toml  requirements.txt
client/.cache_testuser01/: columns_info  number_url_each_query  url_search  user_input_stage_4
client/.langflow/: AutoGenPandasProcess.json  AutoGenQuery.json  GenColumnsName.json  SparkLLM.json  SparkLLM_v2.json
client/compoments/: admin_dashboard.py  config.py  hdfs_explorser.py  spark_explorser.py  stage1.py  stage2.py  stage3.py  stage4.py  stage5.py  stage6.py
client/migrations/: env.py  script.py.mako
client/migrations/versions/: .gitkeep  9942869ca769_add_account_table.py
client/models/: __init__.py  account.py  engine.py
client/modules/: auth.py  cache.py  get_block_code.py  helper.py  json_tool.py  langflow.py  managerKey.py  spark.py
client/modules/searchEngine/: base.py  serper.py
client/modules/spark/: SparkLLM.json  __init__.py  langflow.py
docker/: docker-compose.VizFormats.dot  docker-compose.yml  gen-graph.cmd  hadoop.env  run.cmd  spark-master.env  spark-worker.env
hadoop/: Dockerfile
spark/: Dockerfile  requirements.txt
